# bed-reader

./: .buildinfo  .flake8  .gitignore  .isort.cfg  .travis.yml  AUTHORS.txt  CHANGELOG.md  Cargo.toml  LICENSE.md  MANIFEST.in  README-rust.md  README.md  build.rs  cloud_urls.html  delapi.rs  deletemecmksetup.py  genindex.html  ignore.py  index.html  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-min-dev.txt  requirements-minimal.txt  requirements.txt  search.html  searchindex.js  setpath.bat  setup.py  useful.bat  useful.md
.cargo/: config.toml
.github/: justtest.yml
.github/workflows/: CI2.yml  CI3.yml  ci.yml  docs.yml  justtest.yml  rust.yml  updown.yml
_modules/: index.html
_modules/bed_reader/: _open_bed.html  _sample_data.html  _to_bed.html
_sources/: cloud_urls.rst.txt  index.rst.txt
_static/: documentation_options.js
bed_reader/: CPlinkBedFile.cpp  CPlinkBedFile.h  CPlinkBedFileT.cpp  CPlinkBedFileT.h  MatrixSubset.cpp  MatrixSubset.h  MatrixSubsetT.cpp  MatrixSubsetT.h  __init__.py  _open_bed.py  _open_bed_cloud.py  _sample_data.py  _to_bed.py  ignore.bim  pytest.ini  wrap_matrix_subset.cpp  wrap_matrix_subset.pyx  wrap_plink_parser.cpp  wrap_plink_parser_onep.cpp  wrap_plink_parser_onep.pyx  wrap_plink_parser_openmp.cpp  wrap_plink_parser_openmp.pyx
bed_reader/tests/: __init__.py  registry.txt  test_file_dot.py  test_open_bed.py  test_open_bed_cloud.py  test_opt_dep.py
bed_reader/tests/benchmark/: bench2.ipynb  benchmark.py
bed_reader/tests/data/: 500x400_o640_array.memmap  badfile.bed  distributed_bed_test1_X.bed  distributed_bed_test1_X.metadata.npz  distributed_bed_test1_X.val.npy  plink_sim_10s_100v_10pmiss.bim  plink_sim_10s_100v_10pmiss.fam  small.bad_bim  small.bim_bad_positions.bim  small.fam_bad  small.maf  small.mib  small2_array.memmap  small_array.memmap  small_no_bim.bed  small_no_bim.fam  small_too_short.bed  small_too_short.bim  smallmode0.bed  smallmode0.bim  smallmode0.fam  smallmodebad.bed  some_missing.bim  some_missing.fam  some_missing.properties.npz  sparse.bed  sparse.bim  sparse.fam  toydata.5chrom.bed  toydata.5chrom.bim  toydata.5chrom.fam
doc/: Makefile  make.bat  pynsnptools.html
doc/ipynb/: multithread.ipynb  open_bed.ipynb
doc/source/: Examples.xlsx  cloud_urls.rst  conf.py  index.rst
docs/: .buildinfo  cloud_urls.html  genindex.html  index-carlkyoga.html  index.html  little.html  objects-carlkyoga.inv  objects.inv  py-modindex.html  search-carlkyoga.html  search.html  searchindex.js
docs/1.0.1beta/: .buildinfo  cloud_urls.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/1.0.1beta/_modules/: index.html
docs/1.0.1beta/_modules/bed_reader/: _open_bed.html  _sample_data.html  _to_bed.html
docs/1.0.1beta/_sources/: index.rst.txt  little.md.txt
docs/1.0.1beta/_static/: documentation_options.js
docs/_modules/: index.html
docs/_modules/bed_reader/: _open_bed.html  _sample_data.html  _to_bed.html
docs/_sources/: cloud_urls.rst.txt  index.rst.txt  little.md.txt
docs/_static/: classic.css  documentation_options.js
docs/beta/: genindex.html  index.html  little.html  objects.inv  search.html
docs/beta/_modules/: index.html
docs/beta/_modules/bed_reader/: _open_bed.html  _sample_data.html
docs/beta/_sources/: index.rst.txt
docs/beta/_static/: documentation_options.js
examples/: cloud.rs  no_cloud.rs
examples/cloud/example1/: Cargo.toml
examples/cloud/example1/src/: main.rs
src/: api.rs  bed_cloud.rs  lib.rs  python_module.rs  tests.rs  tests_api.rs
src/supplemental_documents/: cloud_urls_etc.md  options_etc.md
tests/: tests_api.rs  tests_api_cloud.rs
