# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
version = "1.0.1-beta.2"
name = "bed-reader"
description = "Read and write the PLINK BED format, simply and efficiently."
repository = "https://github.com/fastlmm/bed-reader"
readme = "README-rust.md"
documentation = "https://docs.rs/bed-reader/latest/bed_reader/"
authors = ["FaST-LMM Team <fastlmm-dev@python.org>"]
license = "Apache-2.0"
keywords = ["bioinformatics", "plink", "genomics", "genotype", "snps"]
categories = ["science"]
edition = "2021"
homepage = "https://fastlmm.github.io/"
exclude = [
    "**/tests/data/*",
    "doc/*",
    "docs/*",
    "target/*",
    "**/target/debug/*",
]


[lib]
name = "bed_reader"
crate-type = ["cdylib", "rlib"]

# https://github.com/PyO3/pyo3/discussions/2271
# https://pyo3.rs/latest/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
[features]
extension-module = ["pyo3/extension-module", "pyo3-asyncio", "cloud"]
cloud = [
    "object_store/http",
    "object_store/aws",
    "object_store/azure",
    "object_store/gcp",
    "pyo3-asyncio",
    "tokio/full",
    "futures-util",
    "bytecount",
    "itertools",
    "bytes",
    "url"
]
default = ["cloud"]

[dependencies]
thiserror = "1.0.40"
num-traits = "0.2.15"
ndarray-npy = { version = "0.8.1", default-features = false }
rayon = "1.7.0"
numpy = "0.20.0"
ndarray = { version = "0.15.6", features = ["approx", "rayon"] }
statrs = "0.16.0"
byteorder = { version = "1.4.3", default-features = false }
pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
dpc-pariter = "0.4.0" # //  pariter = "0.5.1"
derive_builder = "0.12.0"
anyinput = { version = "0.1.6", features = ["ndarray"] }
fetch-data = "0.1.6"

# Dependencies for cloud feature
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"], optional = true }
object_store = { version = "0.9.0", optional = true }
tokio = { version = "1.35.0", features = ["full"], optional = true }
futures-util = { version = "0.3.29", optional = true }
bytecount = { version = "0.6.7", optional = true }
itertools = { version = "0.12.0", optional = true }
bytes = { version = "1.5.0", optional = true }
url = { version = "2.5.0", optional = true }

[dev-dependencies]
ndarray-rand = "0.14.0"
anyhow = "1.0.75"
rusoto_credential = "0.48.0"
pyo3-asyncio = { version = "0.20.0", features = [
    "tokio-runtime",
    "attributes",
    "testing",
] }
temp_testdir = "0.2.3"
object_store = { version = "0.9.0", features = ["aws","http"]}
thousands = "0.2.0"


[build-dependencies]
pyo3-build-config = "0.20.0"
