[package]
version = "1.0.5-beta-4"
name = "bed-reader"
description = "Read and write the PLINK BED format, simply and efficiently."
repository = "https://github.com/fastlmm/bed-reader"
readme = "README-rust.md"
documentation = "https://docs.rs/bed-reader/latest/bed_reader/"
authors = ["FaST-LMM Team <fastlmm-dev@python.org>"]
license = "Apache-2.0"  # toml-ignore
keywords = ["bioinformatics", "plink", "genomics", "genotype", "snps"]
categories = ["science"]
edition = "2021"
homepage = "https://fastlmm.github.io/"
exclude = [
    "**/tests/data/*",
    "doc/*",
    "docs/*",
    "target/*",
    "**/target/debug/*",
    "**/_static/fonts/*",
    "**/_static/css/*",
]

[lib]
name = "bed_reader"
crate-type = ["cdylib", "rlib"]

# https://github.com/PyO3/pyo3/discussions/2271
# https://pyo3.rs/latest/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
[features]
extension-module = ["pyo3/extension-module", "tokio/full"]
default = []

[dependencies]
thiserror = "1.0.61"
num-traits = "0.2.19"
ndarray-npy = { version = "0.8.1", default-features = false }
rayon = "1.7.0"
numpy = "0.21.0"
ndarray = { version = "0.15.6", features = ["approx", "rayon"] }
statrs = "0.17.1"
byteorder = { version = "1.4.3", default-features = false }
dpc-pariter = "0.4.0" # //  pariter = "0.5.1"
derive_builder = "0.20.0"
anyinput = { version = "0.1.6", features = ["ndarray"] }
fetch-data = "0.1.6"
futures-util = { version = "0.3.29"}
bytecount = { version = "0.6.7"}
itertools = { version = "0.13.0"}
bytes = { version = "1.5.0"}
cloud-file = { version = "0.1.0"}
pyo3 = { version = "0.21.0", features = ["extension-module"], optional = true }
tokio = { version = "1.38.0", features = ["full"], optional = true }

[dev-dependencies]
ndarray-rand = "0.14.0"
anyhow = "1.0.86"
rusoto_credential = "0.48.0"
temp_testdir = "0.2.3"
thousands = "0.2.0"


[build-dependencies]
pyo3-build-config = "0.22.0"
