[project]
name = "bed-reader"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
]
dependencies = ["numpy>=1.13.3"]

[project.optional-dependencies]
samples = ["pooch>=1.5.0"]
sparse = ["scipy>=1.4"]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-datadir",
    "limix-sphinx-theme>=0.0.4",
    "pytest-sphinx>=0.2.2",
    "sphinx>=6.2.1",
    "sphinx-autoapi>=3.0.0",
    "maturin>=1.5.0",
    "isort>=5.11.0",
    "black==23.3.0",
    "pandas>=0.25.1",
    "recommonmark>=0.7.1",
]
min_dev = ["numpy>=1.13.3", "pytest", "pytest-datadir"]

[project.urls]
Homepage = "https://fastlmm.github.io"
"Source Code" = "https://github.com/fastlmm/bed-reader"
"Bug Tracker" = "https://github.com/fastlmm/bed-reader/issues"
Documentation = "http://fastlmm.github.io/bed-reader"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 88

[tool.maturin]
features = ["extension-module"]
