[project]
name = "bed-reader"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["numpy>=1.13.3"]

[project.optional-dependencies]
samples = ["pooch>=1.5.0"]
sparse = ["scipy>=1.4"]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-datadir",
    "limix-sphinx-theme>=0.0.4",
    "pytest-sphinx>=0.2.2",
    "sphinx>=6.2.1",
    "sphinx-autoapi>=3.0.0",
    "maturin>=1.5.0",
    "pandas>=0.25.1",
    "recommonmark>=0.7.1",
    "ruff>=0.1.0",
]
min_dev = ["numpy>=1.13.3", "pytest", "pytest-datadir"]

[project.urls]
homepage = "https://fastlmm.github.io"
source = "https://github.com/fastlmm/bed-reader"
bug-tracker = "https://github.com/fastlmm/bed-reader/issues"
documentation = "http://fastlmm.github.io/bed-reader"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["extension-module"]

[tool.ruff]
line-length = 120
exclude = [
    "*.ipynb",
    "doc/source/conf.py",
    "bed_reader/tests/benchmark/benchmark.py",
]

[tool.ruff.lint]
select = ["E", "F", "W"]


[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob=*.rst --doctest-glob=*.md"
doctest_optionflags = "ELLIPSIS"
