[package]
name = "example1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
rand = "0.8.5"
object_store = { version = "0.9.0", features = ["http", "aws", "azure", "gcp"] }
tokio = { version = "1.35.0", features = ["full"]}
bytecount = "0.6.7"
bytes = "1.5.0"
url = "2.5.0"
futures-util = { version = "0.3.29"}

